@@ -6,11 +6,11 @@
 
 <widget class="GtkWindow" id="main_window">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">GnomeMud</property>
+  <property name="title" translatable="yes">GNOME-Mud</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
-  <property name="default_width">500</property>
+  <property name="default_width">503</property>
   <property name="default_height">400</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
@@ -429,22 +429,6 @@
       </child>
     </widget>
   </child>
-</widget>
-
-<widget class="GnomeAbout" id="about_window">
-  <property name="border_width">5</property>
-  <property name="visible">True</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
-  <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
-  <property name="copyright" translatable="yes">© 1998-2004 Robin Ericsson</property>
-  <property name="comments" translatable="yes">A Multi-User Dungeon (MUD) client for GNOME.</property>
-  <property name="authors"></property>
-  <property name="translator_credits" translatable="yes">translator_credits</property>
 </widget>
 
 <widget class="GtkDialog" id="preferences_window">
@@ -1832,6 +1816,44 @@
       </child>
     </widget>
   </child>
+</widget>
+
+<widget class="GtkAboutDialog" id="about_window">
+  <property name="visible">True</property>
+  <property name="destroy_with_parent">False</property>
+  <property name="name" translatable="yes">GNOME-Mud</property>
+  <property name="copyright" translatable="yes">© 1998-2005 Robin Ericsson</property>
+  <property name="comments" translatable="yes">A Multi-User Dungeon (MUD) client for GNOME.</property>
+  <property name="wrap_license">False</property>
+  <property name="website">http://amcl.sourceforge.net/</property>
+  <property name="website_label" translatable="yes">GNOME-Mud Homepage</property>
+  <property name="authors">Robin Ericsson &lt;lobbin@localhost.nu&gt;
+Jordi Mallach &lt;jordi@debian.org&gt;
+Daniel Patton &lt;seven-nation@army.com&gt;
+Les Harris &lt;lescom@comcast.net&gt;
+
+David Zanetti &lt;dave@lynx.co.nz&gt;
+Ben Gertzfield &lt;che@debian.org&gt;
+Will Schenk &lt;chilly@psu.edu&gt;
+desaster &lt;desaster@sci.fi&gt;
+Paul Cameron &lt;thrase@progsoc.uts.edu.au&gt;
+Abigail Brady &lt;morwen@evilmagic.org&gt;
+Bret Robideaux &lt;fayd@alliances.org&gt;
+Maxim Kiselev &lt;max@hostel.nstu.ru&gt;
+Benjamin Curtis
+Jörgen Kosche 
+Jeroen Ruigrok &lt;asmodai@wxs.nl&gt;
+Jorge Garcia &lt;Jorge.Garcia@uv.es&gt;
+Benjamin Geiger &lt;bgeiger@ithink.net&gt;
+Petter E. Stokke
+Vashti &lt;vashti@jml.net&gt;
+Sjoerd Simons &lt;sjoerd@beast.luon.net&gt;
+Remi Bonnet</property>
+  <property name="documenters">Jordi Mallach &lt;jordi@debian.org&gt;</property>
+  <property name="artists">Daniel Patton &lt;seven-nation@army.com&gt;</property>
+  <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">Jordi Mallach &lt;jordi@debian.org&gt;
+Martin Quinson
+Jörgen Kosche </property>
 </widget>
 
 </glade-interface>
